# tutor_gym

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
sandbox/algebra/: algebra_funcs.py  ground_truth.txt  output.pstats  run_al.py  run_al_author.py  test.py  test2.py  test3.py  test4.py  test5.py
sandbox/apprentice-tutors/: llm_evaluator.py  run_apprentice_tutors.py  run_at_log.py
sandbox/fractions/: frac_authoring.ipynb  ground_truth.txt  run_2mech.py  run_al.py  run_al_author.py  run_al_fractions.py  run_al_norf.py  run_dqn.py  run_dqn_demos.py  run_dqn_w_demos.py  run_dual_decision_tree.py  run_lhs_rhs_agent.py  run_oracle.py  run_ppo.py
sandbox/multicolumn/: active_learning.ipynb  d2_multi.py  garbage.py  ground_truth.txt  gt-carryZ-3.txt  leg_expz.txt  output.pstats  run_2mech.py  run_al.py  run_al_author.py  run_al_norf.py  run_author2.py  run_decision_tree_multi-v1.py  run_dqn.py  run_dqn_demos.py  run_dqn_w_demos.py  run_ppo.py  run_single_decision_tree_multi.py
sandbox/oa-tutors/: run_oa_tutors.py
tutor_gym/: std.py  trainer.py  utils.py
tutor_gym/envs/: __init__.py  test.py
tutorenvs/: forcedemo.py  fractions.py  fractions_std.py  fractions_v.py  multicolumn.py  multicolumn_std.py  multicolumn_v.py  std.py  test.py  trainer.py  utils.py
tutorgym/: __init__.py  agent_api.py  evaluator.py  forcedemo.py  fsm.py  oracle_agent.py  shared.py  std.py  trainer.py  utils.py
tutorgym/agents/: oracle_agent.py
tutorgym/env_classes/: apprentice_tutor.py  env_base.py  fsm_tutor.py  oa_tutors.py  planner.py
tutorgym/envs/: __init__.py  test.py
tutorgym/eval/: .gitignore  README.txt  action_check.csv  action_check_anthropic.csv  action_type_examples.yaml  augment_compl_profs.py  correctness_check.csv  correctness_check_anthropic.csv  ctat_prompts.yaml  gen_ctat_compl_prof.py  gen_oa_compl_prof.py  incorrectness_check.csv  incorrectness_check_anthropic.csv  llm_base.py  llm_eval.py  llm_eval_anthropic.py  llm_eval_deepseek.py  llm_eval_openai.py  (+8 more)
(+1183 files in other folders)
