[metadata]
name = tutor_gym
author = 'Daniel Weitekamp, Christopher Maclellan, Momin Siddiqui'
author-email = weitekamp@gatech.edu
summary = Simulated (headless) tutoring systems for training/evaluating learning or tutoring agents.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/Teachable-AI-Lab/tutor_gym
project_urls =
    Documentation = https://github.com/Teachable-AI-Lab/tutor_gym
    Source Code = https://github.com/Teachable-AI-Lab/tutor_gym
license = LICENSE
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    tutor_gym

[bdist_wheel]
universal=1

[aliases]
test=pytest
